styles.css
html {
    -webkit-tap-highlight-color: transparent;
}

body {
    font-family: sans-serif;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    color: #333;
    -webkit-tap-highlight-color: transparent;
}

nav {
    background-color: #333;
    padding: 10px 0;
    text-align: center;
}

nav a {
    color: #fff;
    text-decoration: none;
    padding: 10px 20px;
    margin: 0 10px;
    border-radius: 5px;
}

nav a:hover,
nav a.active {
    background-color: #555;
}

.container {
    width: 95%;
    margin: 20px auto;
    padding: 10px;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
}

h2 {
    border-bottom: 1px solid #eee;
    padding-bottom: 10px;
    margin-bottom: 15px;
}

#summaryStats {
    margin-bottom: 15px;
}

form label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}

form input,
form button {
    margin-bottom: 10px;
    padding: 8px;
    border: 1px solid #ddd;
    border-radius: 4px;
}

form button {
    background-color: #5cb85c;
    color: #fff;
    border: none;
    cursor: pointer;
}

form button:hover {
    background-color: #4cae4c;
}

.create-button {
    display: flex;
    width: 100%;
    justify-content: flex-end;
}

#userCheckboxes {
    margin-bottom: 15px;
}

#userCheckboxes input[type="checkbox"] {
    margin-right: 5px;
    margin-bottom: 5px;
    transform: scale(1.2);
}

#userCheckboxes label {
    display: inline-block;
    margin-right: 15px;
    margin-bottom: 5px;
    font-weight: normal;
}

#userCheckboxes div {
    display: flex;
    align-items: center;
}

#editUserCheckboxes {
    margin-bottom: 15px;
}

#editUserCheckboxes input[type="checkbox"] {
    margin-right: 5px;
    margin-bottom: 5px;
    transform: scale(1.2);
}

#editUserCheckboxes label {
    display: inline-block;
    margin-right: 15px;
    margin-bottom: 5px;
    font-weight: normal;
}

#editUserCheckboxes div {
    display: flex;
    align-items: center;
}

.button-container {
    margin-top: 15px;
    text-align: right;
}


.month-summary h3 {
    font-size: 1.2rem;
    margin-bottom: 5px;
    padding-bottom: 5px;
    border-bottom: 1px solid #eee;
}

.month-summary ul {
    list-style: none;
    padding: 0;
}

.attendance-item {
    padding: 10px;
    border-bottom: 1px solid #eee;
    cursor: pointer;
    touch-action: manipulation;
    font-size: 1rem;
    margin-bottom: 5px;
}

.attendance-item:hover {
    background-color: #f0f0f0;
}


table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 10px;
}

th,
td {
    border: 1px solid #ddd;
    padding: 8px;
    text-align: left;
    font-size: 0.9rem;
}

th {
    background-color: #f0f0f0;
}

.modal {
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.4);
}

.modal-content {
    background-color: #fefefe;
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 85%;
    border-radius: 8px;
    position: relative;
    max-height: 80%;
    overflow-y: auto;
}

.table-container {
    overflow-x: auto;
}

.close-button {
    color: #aaa;
    position: absolute;
    top: 5px;
    right: 10px;
    font-size: 28px;
    font-weight: bold;
    cursor: pointer;
}

.close-button:hover,
.close-button:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
}

.modal-buttons {
    margin-top: 15px;
    text-align: right;
}

.modal-buttons button {
    margin-left: 10px;
    background-color: #5cb85c;
    color: #fff;
    border: none;
    cursor: pointer;
    padding: 10px 15px;
}

.modal-buttons button:hover {
    background-color: #4cae4c;
}

/* 响应式设计 */
@media screen and (max-width: 768px) {
    .container {
        width: 90vw;
        padding: 10px;
    }

    .modal-content {
        width: 85vw;
        margin: 30% auto;
    }
}

